syntax = "proto3";

option csharp_namespace = "LibplanetConsole.Grpc.Bank";

package libplanet.console.bank.v1;

service BankGrpcService {
  rpc Transfer(TransferRequest) returns (TransferResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc GetCurrencies(GetCurrenciesRequest) returns (GetCurrenciesResponse);
}

message CurrencyInfoProto {
  string code = 1;
  bytes currency = 2;
}

message TransferRequest {
  string recipient_address = 1;
  string amount = 2;
}

message TransferResponse {
}

message GetBalanceRequest {
  string address = 1;
  string currency = 2;
}

message GetBalanceResponse {
  string balance = 1;
}

message GetCurrenciesRequest {
}

message GetCurrenciesResponse {
  repeated CurrencyInfoProto currencies = 1;
}
